<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.red5pro</groupId>
    <artifactId>red5pro-common</artifactId>
    <packaging>jar</packaging>
    <name>red5pro-common</name>
    <!-- major, minor, release, build -->
    <version>12.0.0.4</version>
    <url>https://github.com/red5pro/red5pro-common</url>
    <description>Red5Pro Common</description>
    <inceptionYear>2015</inceptionYear>
    <organization>
        <name>Red5Pro</name>
        <url>http://red5pro.com/</url>
    </organization>
    <licenses>
        <license>
            <name>Infrared5, Inc</name>
            <url>https://account.red5pro.com/assets/LICENSE.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <issueManagement>
        <system>github</system>
        <url>https://github.com/red5pro/red5pro-common/issues</url>
    </issueManagement>
    <scm>
        <url>https://github.com/infrared5/red5pro-common.git</url>
        <connection>scm:git:https://github.com/red5pro/red5pro-common.git</connection>
        <developerConnection>scm:git:https://github.com/red5pro/red5pro-common.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <id>Dominick Accattato</id>
            <email>dominick@infrared5.com</email>
        </developer>
        <developer>
            <id>Paul Gregoire</id>
            <email>paul@red5pro.com</email>
        </developer>
        <developer>
            <id>Andy Shaules</id>
            <email>ashaules@infrared5.com</email>
        </developer>
        <developer>
            <id>Nate Roe</id>
            <email>nate@red5pro.com</email>
        </developer>
    </developers>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <skipTests>true</skipTests>
        <maven.compiler.source>1.11</maven.compiler.source>
        <maven.compiler.target>1.11</maven.compiler.target>
        <java.release.level>11</java.release.level>
        <maven.build.timestamp.format>MM.dd.yyyy HH:mm</maven.build.timestamp.format>
        <timestamp>${maven.build.timestamp}</timestamp>
        <red5.version>1.3.21</red5.version>
        <tomcat.version>8.5.87</tomcat.version>
        <mina.version>2.0.23</mina.version>
        <spring.version>5.3.24</spring.version>
        <commons-text.version>[1.10,)</commons-text.version>
        <httpcomponents.version>[4.5.13,)</httpcomponents.version>
        <gson.version>2.9.0</gson.version>
        <json.version>[2.4.1,)</json.version>
        <bc.version>1.62</bc.version>
        <junit.version>[4.13.1,)</junit.version>
        <red5pro-ice.version>[1.0.4,)</red5pro-ice.version>
        <slf4j.version>1.7.36</slf4j.version>
        <logback.version>1.2.11</logback.version>
    </properties>
    <distributionManagement>
        <repository>
            <id>red5pro-ext-release</id>
            <name>red5pro-releases</name>
            <url>https://red5pro.jfrog.io/red5pro/ext-release-local</url>
        </repository>
        <snapshotRepository>
            <id>red5pro-ext-snapshot</id>
            <name>red5pro-snapshots</name>
            <url>https://red5pro.jfrog.io/red5pro/ext-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>
    <dependencies>
        <dependency>
            <groupId>org.red5</groupId>
            <artifactId>red5-server</artifactId>
            <version>${red5.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.red5</groupId>
            <artifactId>red5-client</artifactId>
            <version>${red5.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.red5</groupId>
            <artifactId>red5-io</artifactId>
            <version>${red5.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.red5</groupId>
            <artifactId>red5-server-common</artifactId>
            <version>${red5.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>tomcat-servlet-api</artifactId>
            <version>${tomcat.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.mina</groupId>
            <artifactId>mina-core</artifactId>
            <version>${mina.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.red5pro</groupId>
            <artifactId>red5pro-ice</artifactId>
            <version>${red5pro-ice.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${httpcomponents.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.minidev</groupId>
            <artifactId>json-smart</artifactId>
            <version>${json.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>${bc.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>${commons-text.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <!-- Project http://code.revelc.net/formatter-maven-plugin/ -->
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.19.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configFile>Red5Pro-formatter.xml</configFile>
                    <!-- Enforce line-feed (linux,mac) line endings att -->
                    <lineEnding>LF</lineEnding>
                    <!-- Exclude xml and props files -->
                    <excludes>
                        <exclude>**/*.xml</exclude>
                        <exclude>**/*.html</exclude>
                        <exclude>**/*.properties</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!-- mvn versions:display-plugin-updates -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M2</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.0.5</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <configuration>
                            <!-- compile everything to ensure module-info contains right entries -->
                            <release>${java.release.level}</release>
                        </configuration>
                    </execution>
                    <execution>
                        <id>base-compile</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <!-- recompile everything for target VM except the module-info.java -->
                        <configuration>
                            <excludes>
                                <exclude>module-info.java</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
                <!-- defaults for compile and testCompile -->
                <configuration>
                    <!-- Only required when JAVA_HOME isn't at least Java 9 and when haven't 
                        configured the maven-toolchains-plugin -->
                    <jdkToolchain>
                        <version>11</version>
                    </jdkToolchain>
                    <verbose>true</verbose>
                    <release>${java.release.level}</release>
                </configuration>
            </plugin>
            <!-- https://maven.apache.org/guides/mini/guide-using-toolchains.html -->
            <!--
            <plugin>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>[1.11,)</version>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <verbose>false</verbose>
                    <failOnError>false</failOnError>
                    <sourcepath>${basedir}/src/main/java</sourcepath>
                    <includeDependencySources>false</includeDependencySources>
                    <dependencySourceIncludes>
                        <dependencySourceInclude>com.red5pro:*</dependencySourceInclude>
                    </dependencySourceIncludes>
                    <detectOfflineLinks>false</detectOfflineLinks>
                    <tags>
                        <tag>
                            <name>todo</name>
                            <!-- todo tag for all places -->
                            <placement>a</placement>
                            <head>To do:</head>
                        </tag>
                    </tags>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.4</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                    <!-- Use 7 available chars from git commit -->
                    <shortRevisionLength>7</shortRevisionLength>
                    <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Build-OS>${os.name} ${os.version}</Build-OS>
                            <Build-Java>Java ${java.version}</Build-Java>
                            <Build-Timestamp>${timestamp}</Build-Timestamp>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>5.1.6</version>
                <extensions>true</extensions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.19.1</version>
                    <configuration>
                        <skipTests>${skipTests}</skipTests>
                        <!-- forkCount=1/reuseForks=false executes each test class in its own 
                            JVM process, one after another. It creates the highest level of separation 
                            for the test execution, but it would probably also give you the longest execution 
                            time of all the available options. Consider it as a last resort. -->
                        <forkCount>1</forkCount>
                        <reuseForks>false</reuseForks>
                        <argLine>-Xms512m -Xmx1024m -server -XX:+UseParallelGC
                            -Xverify:none</argLine>
                        <!-- <useSystemClassLoader>false</useSystemClassLoader> <useManifestOnlyJar>false</useManifestOnlyJar> -->
                        <!-- kill forks -->
                        <shutdown>kill</shutdown>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>2.9</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-scm-plugin</artifactId>
                    <version>1.11.3</version>
                    <configuration>
                        <connectionType>connection</connectionType>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>3.0.0-M4</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <useReleaseProfile>false</useReleaseProfile>
                        <releaseProfiles>release</releaseProfiles>
                        <goals>deploy</goals>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
